<resources>
    <string name="app_name">MapEye</string>
    <string name="action_settings">设置监听手机</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="input_fence_label_name">输入围栏名称</string>
    <string name="download_offline_map">下载离线地图</string>
    <string name="search_offline_city">搜索离线城市地图</string>
    <string name="search_city">搜索离线</string>
    <string name="downloaded_city">已下载的地图</string>
    <string name="city_download_manager">下载管理</string>
    <string name="city_list">城市列表</string>
    <string name="look">查看</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="title_activity_center">CenterActivity</string>
    <string name="add_contact">用户手机号码</string>
    <string name="invite_reason">请求理由</string>
    <string name="back">返回</string>
    <string name="done">确定</string>
    <string name="send">发送</string>
    <string name="map_display_type">地图类型</string>
    <string name="normal_map_display">普通地图</string>
    <string name="satellite_map_display">卫星地图</string>
    <string name="look_for_monitor_recode">查看监控记录</string>
    <string name="upload_user_avatar">上传头像</string>
    <string name="autostart">开机启动</string>
    <string name="set_location_speed_tips">默认情况下开启GPS的时候每秒定位一次，最小定位间隔一秒一次,最大定位间隔30分钟</string>
    <string name="location_speed_input_hint">定位间隔（单位秒）</string>
    <string name="set_location_speed">设置定位发送频率</string>
    <string name="offline_map">离线地图</string>
    <string name="settings">设置</string>
    <string name="user_center">个人中心</string>
    <string name="logout">退出登录</string>
    <string name="login_error_timeout">登录超时</string>
    <string name="kick_logout">你的账号已经在其他设备登录</string>
    <string name="login_error">登录失败</string>
    <string name="need_permission">为了使用本应用需要得到必要的权限</string>
    <string name="add_friend">添加好友</string>
    <string name="request_reason">请求理由</string>
    <string name="preset_remark">预设备注</string>
    <string name="send_add_friend_req">发送请求</string>
    <string name="look_up_timer_task">查看定时任务</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="date">日期</string>
    <string name="time">时刻</string>
    <string name="save_timer_task">保存此任务</string>
    <string name="timer_task_continue_tip">连续执行。当开始与结束时间间隔不在同一天，则从开始日期到结束日期，每天按小时分钟执行</string>
    <string name="timer_task_repeat_tip">重复执行。忽略年月的设置，按日期时刻重复执行</string>
    <string name="tencent_tls_ui_hostLoginTitle">手机号码登录</string>
</resources>
