<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="dong.lan.mapeye.MainActivity">
    <item
        android:orderInCategory="1"
        android:title="@string/map_display_type">
        <menu>
            <item
                android:id="@+id/map_normal"
                android:title="@string/normal_map_display" />
            <item
                android:id="@+id/map_satellite"
                android:title="@string/satellite_map_display" />
        </menu>
    </item>
    <item
        android:id="@+id/rename"
        android:orderInCategory="2"
        android:title="重命名" />
    <item
        android:id="@+id/test"
        android:title="测试" />
</menu>
