<?xml version="1.0" encoding="utf-8"?><!--
  ~
  ~   Copyright (C) 2016 author : 梁桂栋
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  ~   Email me : stonelavender@hotmail.com
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:text="@string/set_location_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/md_grey_900"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/set_location_speed_tips" />

    <EditText
        android:id="@+id/location_speed_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/circle_rect_stroke_black_8"
        android:hint="@string/location_speed_input_hint"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <dong.lan.mapeye.views.customsView.LabelTextView
        android:id="@+id/location_speed_done"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/done"
        android:textColor="@color/md_white_1000"
        android:textSize="20sp"
        app:bg_color="@color/colorPrimary"
        app:radius="4dp"
        />

</LinearLayout>