<?xml version="1.0" encoding="utf-8"?><!--
  ~
  ~   Copyright (C) 2016 author : 梁桂栋
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  ~   Email me : stonelavender@hotmail.com
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_friend"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/addFriendReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/circle_rect_stroke_black_8"
        android:hint="@string/request_reason"
        android:minHeight="45dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColorHint="@color/md_grey_500" />

    <EditText
        android:id="@+id/addFriendRemark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/circle_rect_stroke_black_8"
        android:hint="@string/preset_remark"
        android:minHeight="45dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColorHint="@color/md_grey_500" />

    <dong.lan.mapeye.views.customsView.LabelTextView
        android:id="@+id/addFriendReqDone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/send_add_friend_req"
        android:textColor="@color/md_white_1000"
        android:textSize="20sp"
        app:bg_color="@color/colorPrimary"
        app:radius="8dp" />

</LinearLayout>