<?xml version="1.0" encoding="utf-8"?><!--
  ~
  ~   Copyright (C) 2016 author : 梁桂栋
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  ~   Email me : stonelavender@hotmail.com
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/md_white_1000"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">
        <ImageView
            android:layout_margin="40dp"
            android:id="@+id/user_center"
            android:src="@drawable/boy"
            android:layout_width="60dp"
            android:layout_height="60dp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/md_grey_500" />

    <TextView
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:drawableRight="@drawable/arrow_right_grey_48"
        android:gravity="center_vertical"
        android:text="@string/settings"
        android:textColor="@color/md_grey_900"
        android:textSize="20sp" />

    <View
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/md_grey_500" />

    <TextView
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:id="@+id/offline_map_download"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:drawableRight="@drawable/arrow_right_grey_48"
        android:gravity="center_vertical"
        android:text="@string/offline_map"
        android:textColor="@color/md_grey_900"
        android:textSize="20sp" />

    <View
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/md_grey_500" />
    <View
        android:layout_width="1px"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null" />

    <Button
        android:id="@+id/drawer_logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/md_white_1000"
        android:textSize="20sp"
        android:background="@color/md_orange_500"
        />

</LinearLayout>