<?xml version="1.0" encoding="utf-8"?><!--
  ~
  ~   Copyright (C) 2016 author : 梁桂栋
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  ~   Email me : stonelavender@hotmail.com
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/action_bar" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/user_center_head"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/boy" />

        <dong.lan.library.LabelTextView
            android:id="@+id/user_center_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:text="位置绑定"
            android:textColor="@color/md_white_1000"
            android:textSize="18sp"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/user_center_rename_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawablePadding="16dp"
            android:drawableRight="@drawable/edit_write_32"
            android:gravity="center_vertical"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/user_center_rename_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:src="@drawable/done_48"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/user_center_phone_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/user_center_phone_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:src="@drawable/done_48"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="用户标示用于添加好友" />

        <dong.lan.library.LabelTextView
            android:id="@+id/userIdentifier"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/md_white_1000"
            android:textSize="20sp"
            app:bg_color="@color/colorPrimary"
            app:radius="25dp" />

    </LinearLayout>


    <dong.lan.library.LabelTextView
        android:enabled="false"
        android:id="@+id/userTimerTask"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/look_up_timer_task"
        android:textColor="@color/md_white_1000"
        android:textSize="20sp"
        app:bg_color="@color/colorPrimary"
        app:radius="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <dong.lan.library.LabelTextView
            android:id="@+id/user_center_look_for_monitor"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/look_for_monitor_recode"
            android:enabled="false"
            android:textColor="@color/md_white_1000"
            android:textSize="18sp"
            app:bg_color="@color/colorPrimary" />

        <dong.lan.library.LabelTextView
            android:id="@+id/user_center_upload_head"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/upload_user_avatar"
            android:enabled="false"
            android:textColor="@color/md_white_1000"
            android:textSize="18sp"
            app:bg_color="@color/md_orange_500" />
    </LinearLayout>


</LinearLayout>